# consumer

./: .gitignore  README.md  flaskserver.py  flaskserverStressTest.py  pyproject.toml  requirements.txt  sampleFronteraSystem.json  sampleMockProfilerJobApp.json
IntelligencePlaneKafkaConsumer/: Consumer.py  IPConsumer.py  IPConsumerStressTest.py  daemon_base.py
kafkaConsumer/: Consumer.py
server/: flaskserver.py
